очень много фиксов

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -17,7 +17,7 @@ $color-15: #0a1217;
 //$color-17: none;
 //$color-18: none;
 //$color-19: none;
-//$color-20: none;
+$color-20: rgba(1, 22, 37, 0.3);
 $color-21: rgba(1, 22, 37, 1);
 $color-22: rgba(255, 255, 255, 0.1);
 
