--- a/src/modules/components/[0_grouped_0]-Maps-all-comp/maps-elements-add.module.scss
+++ b/src/modules/components/[0_grouped_0]-Maps-all-comp/maps-elements-add.module.scss
@@ -1,19 +1,34 @@
 @import "../../../Variables";
 
-.box-marker-add {
+@keyframes ErrorsViewBox {
+  0% {
+    opacity: 0;
+    height: 0;
+    width: auto;
+  }
+  100% {
+    opacity: 1;
+    width: auto;
+    height: auto;
+  }
+}
+
+.boxMarkerAddWrapper {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100%;
 
-  .colums-add-1 {
+  .columnsAddOne {
     display: flex;
     flex-direction: column;
     width: 350px;
-    height: 700px;
-    margin-right: 15px;
+    min-width: 350px;
+    max-width: 350px;
+    height: auto;
+    margin-right: 8px;
 
-    .input-name {
+    .nameInput {
       width: auto;
       height: 28px;
       line-height: 28px;
@@ -24,14 +39,57 @@
       padding-right: 10px;
     }
 
-    .col-row {
+    .inputStyle {
+      width: 100%;
+      min-width: 100%;
+      max-width: 100%;
+      height: auto;
+      min-height: 36px;
+      max-height: 180px;
+      border: 0.5px solid $color-22;
+      border-radius: 7px;
+      color: $color-8;
+      text-align: start;
+      font-size: 16px;
+      font-weight: 400;
+      outline: none !important;
+      padding: 7px;
+      background: $color-7;
+      transition: all 0.35s ease;
+
+      &::-webkit-scrollbar {
+        width: 4px !important;
+      }
+
+      &:hover,
+      &:active,
+      &:focus {
+        outline: none;
+        background: $color-21;
+      }
+
+      .optionList {
+        color: $color-3;
+        background: $color-7;
+        font-size: 14px;
+        border-radius: 7px;
+
+        &:hover,
+        &:active,
+        &:focus {
+          outline: none;
+        }
+      }
+    }
+
+    .rowWrapperContent {
       display: flex;
       flex-direction: column;
       width: 100%;
       height: auto;
       margin-bottom: 25px;
 
-      .go-back {
+      .back {
         background: transparent;
         border: none;
         border-radius: 0;
@@ -51,51 +109,15 @@
           color: $color-4;
         }
       }
-
-      .input-str {
-        width: auto;
-        min-width: 50%;
-        height: auto;
-        border: 0.5px solid $color-22;
-        border-radius: 7px;
-        color: $color-8;
-        text-align: start;
-        font-size: 16px;
-        font-weight: 400;
-        outline: none !important;
-        padding: 7px;
-        background: $color-7;
-        transition: all 0.35s ease;
-
-        &:hover,
-        &:active,
-        &:focus {
-          outline: none;
-          background: $color-21;
-        }
-
-        .option-list {
-          color: $color-3;
-          background: $color-7;
-          font-size: 14px;
-          border-radius: 7px;
-
-          &:hover,
-          &:active,
-          &:focus {
-            outline: none;
-          }
-        }
-      }
     }
 
-    .coord {
+    .coordinatesWrapper {
       display: flex;
       flex-direction: column;
       width: 100%;
       height: auto;
 
-      .block-row {
+      .blockRow {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
@@ -103,43 +125,35 @@
         height: auto;
         margin-bottom: 22px;
 
-        .col-row-custom {
+        .rowWrapperContentCustom {
           display: flex;
           flex-direction: row;
 
-          .input-str-custom {
-            width: 100px;
-            height: auto;
-            border: 0.5px solid $color-22;
-            border-radius: 7px;
-            color: $color-8;
-            text-align: start;
-            font-size: 16px;
-            font-weight: 400;
-            outline: none !important;
-            padding: 5px;
-            background: $color-7;
-            transition: all 0.35s ease;
-
-            &:hover,
-            &:active,
-            &:focus {
-              outline: none;
-              background: $color-21;
-            }
+          .custom {
+            width: 100px !important;
+            max-width: none;
+            min-width: 0;
+            height: 28px !important;
+            min-height: 0;
+            max-height: none;
           }
         }
       }
     }
 
-    .box-bt {
+    .error {
+      display: flex;
+    }
+
+    .boxActionsWrapper {
       width: 100%;
       height: auto;
       display: flex;
       flex-direction: row;
+      justify-content: space-evenly;
       margin-top: auto;
 
-      .bt-all {
+      .buttonAllStyles {
         width: 140px;
         height: 36px;
         line-height: 36px;
@@ -149,12 +163,12 @@
         font-size: 14px;
         color: $color-3;
         text-align: center;
-        margin: 0 auto;
         cursor: pointer;
         transition: all 0.35s ease;
+        font-family: $fontCustom2;
       }
 
-      .bt-add {
+      .buttonAdd {
         background: $color-4;
 
         &:hover {
@@ -163,7 +177,7 @@
         }
       }
 
-      .bt-del {
+      .buttonDelete {
         background: $color-9;
 
         &:hover {
@@ -173,10 +187,9 @@
     }
   }
 
-  .colums-add-2 {
+  .columnsAddTwo {
     display: flex;
     width: 100%;
-    max-width: 750px;
     height: 100%;
     margin: 0 auto;
   }
@@ -192,42 +205,58 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .box-marker-add {
+  .boxMarkerAddWrapper {
     flex-direction: column;
     overflow: auto;
 
-    .colums-add-1 {
-      height: auto;
-      min-height: 525px;
-      max-height: 600px;
-      width: 96%;
+    &::-webkit-scrollbar {
+      width: 4px !important;
     }
 
-    .colums-add-2 {
+    .columnsAddOne {
+      height: auto;
+      min-height: 500px;
+      max-height: none;
+      width: 100%;
+      min-width: 0;
+      max-width: none;
+      padding: 0 8px 8px 0;
+      margin: 0;
+
+      .error {
+        flex-direction: row;
+        justify-content: center;
+      }
+
+      .boxActionsWrapper {
+        margin-top: 50px;
+      }
+    }
+
+    .columnsAddTwo {
       height: auto;
       min-height: 750px;
       max-height: 950px;
-      padding: 8px;
+      width: 100%;
+      padding-right: 8px;
     }
   }
 }
 
 @media screen and (max-width: 960px) {
-  .box-marker-add {
-    .colums-add-1 {
-      margin: 10px auto 5px auto;
+  .boxMarkerAddWrapper {
 
-      .box-bt {
-        justify-content: center;
-
-        .bt-all {
-          margin: 0 15px;
-        }
-      }
+    .columnsAddOne {
+      padding: 0 0 8px 0;
+      min-height: 0;
     }
 
-    .colums-add-2 {
-      max-width: none;
+    .columnsAddTwo {
+      height: 800px;
+      min-height: 800px;
+      max-height: 800px;
+      width: 100%;
+      padding: 0 0 8px 0;
     }
   }
 }
