--- a/src/modules/components/[0_grouped_0]-Profile/gallery/AnalyticsPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/AnalyticsPost.module.scss
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     width: 100%;
     height: auto;
     margin-top: 10px;
@@ -34,14 +35,15 @@
     .oneColumn {
       display: flex;
       flex-direction: column;
-      min-height: 0;
+      min-height: fit-content;
       max-height: 664px;
       width: 300px;
       overflow: auto;
-      background: $color-7;
+      background: $color-20;
       border: 1px solid $color-22;
       border-radius: 5px;
-      padding: 20px;
+      padding: 15px;
+      margin: 0 4px 8px 4px;
 
       &::-webkit-scrollbar {
         width: 4px;
@@ -93,7 +95,7 @@
           margin-left: 8px;
         }
 
-        .linkUsers{
+        .linkUsers {
           font-weight: 400;
           width: auto;
           height: 28px;
