--- a/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
@@ -1,23 +1,5 @@
 @import "../../../../Variables";
 
-//.galleryBlock {
-//  display: flex;
-//  flex-direction: row;
-//  width: 100%;
-//  height: 100%;
-//  padding: 50px;
-//
-//  .h4Title {
-//    width: 100%;
-//    height: 50px;
-//    line-height: 50px;
-//    text-align: center;
-//    color: $color-3;
-//    font-size: 24px;
-//    font-family: $fontCustom2;
-//  }
-//}
-
 .galleryBlock {
   display: flex;
   flex-direction: column;
@@ -29,35 +11,64 @@
     width: 4px;
   }
 
+  .searchPost {
+    display: flex;
+    width: auto;
+    height: 36px;
+    line-height: 36px;
+    outline: none;
+    background: $color-7;
+    border: 0.5px solid $color-22;
+    border-radius: 5px;
+    transition: all 0.25s ease-in-out;
+    color: $color-8;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin: 0 10px 10px 0;
+
+    &:hover,
+    &:focus,
+    &:active {
+      outline: none;
+      background: $color-21;
+    }
+  }
+
   .onePostGallery {
     width: auto;
-    height: 100%;
-    max-height: 140px;
-    min-height: 140px;
+    //height: 100%;
+    //max-height: 164px;
+    //min-height: 164px;
     padding: 10px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     margin: 0 10px 10px 0;
-    background: $color-14;
+    background: $color-20;
     border: 1px solid $color-22;
     border-radius: 5px;
+    height: auto;
+    min-height: fit-content;
+    max-height: none;
 
     &:nth-child(1) {
-      justify-content: center;
+      height: 140px;
+      min-height: 140px;
+      max-height: 140px;
     }
+
 
     &:hover > .addPost {
       padding: 0;
     }
 
     .addPost {
-      margin: auto 0;
       width: 64px;
       height: 64px;
       position: relative;
       padding: 8px;
       transition: all 0.35s ease;
+      margin: auto 0;
     }
 
     .wrapperImage {
@@ -108,14 +119,37 @@
         color: $color-3;
         width: auto;
         text-align: center;
-        margin: 0 auto;
+        margin: 4px auto;
+      }
+
+      .tags {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
+        margin: auto 0;
+        height: auto;
+        min-height: 24px;
+        max-height: none;
+
+        .oneTag {
+          margin: 2px 4px;
+          font-size: 12px;
+          height: 20px;
+          line-height: 20px;
+          border-radius: 4px;
+          color: darken($color-3, 50%);
+          background: $color-22;
+          padding: 0 8px;
+        }
       }
 
       .containerActions {
         display: flex;
         flex-direction: row;
         justify-content: center;
-        margin: auto 0 0 0;
+        margin: 4px 0 0 0;
 
         .actions {
           height: 28px;
@@ -171,4 +205,115 @@
       }
     }
   }
+}
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+  .galleryBlock {
+    .onePostGallery {
+      height: auto;
+      min-height: fit-content;
+      max-height: none;
+
+      &:nth-child(1) {
+        height: 140px;
+        min-height: 140px;
+        max-height: 140px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .galleryBlock {
+    .searchPost {
+      margin: 0 0 8px 0;
+    }
+
+    .onePostGallery {
+      margin: 0 0 8px 0;
+
+      .desc {
+        .tags {
+          margin: 6px auto;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .galleryBlock {
+    .onePostGallery {
+      .desc {
+        .title {
+          font-size: 17px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .galleryBlock {
+    .onePostGallery {
+      flex-direction: column;
+
+      .wrapperImage {
+        margin: 0 auto;
+        width: 360px;
+        max-width: 360px;
+        min-width: 360px;
+        height: auto;
+        max-height: 150px;
+      }
+
+      .addPost {
+        margin: 0 auto;
+      }
+
+      .desc {
+        margin: 8px auto 0 auto;
+
+        .title {
+          height: 100%;
+          min-height: fit-content;
+          max-height: fit-content;
+          line-height: 1.5;
+          font-size: 16px;
+        }
+
+        .paragraph {
+          margin: 8px auto;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .galleryBlock {
+    .onePostGallery {
+      .desc {
+        .title {
+          font-size: 15px;
+        }
+
+        .paragraph {
+          font-size: 13px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
 }
