--- a/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/my-prizes/My-prizes.module.scss
@@ -1,28 +1,28 @@
 @import "../../../../Variables";
 
-.box-prizes {
+.boxPrizesWrapper {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
 
-  .prizes-h4 {
+  .prizesTitleH4 {
     width: auto;
     height: 30px;
     line-height: 30px;
     color: $color-3;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 400;
-    margin: 30px auto;
+    margin: 8px auto;
   }
 
   .prizes-link {
     font-weight: 400;
     width: 100%;
-    height: 40px;
-    line-height: 40px;
+    height: 44px;
+    line-height: 44px;
     color: $color-1;
-    margin: 0 auto;
+    margin: 8px auto 0 auto;
     text-align: center;
     outline: none;
     transition: all 0.55s ease;
@@ -39,7 +39,7 @@
     }
   }
 
-  .all-prizes {
+  .allPrizesContainer {
     width: 100%;
     height: 100%;
     display: flex;
@@ -47,17 +47,22 @@
     overflow: auto;
     padding-right: 10px;
 
-    .one-prizes {
+    &::-webkit-scrollbar {
+      width: 4px !important;
+    }
+
+    .onePrizesWrapperBox {
       width: 100%;
       height: 130px;
       display: flex;
       flex-direction: row;
       padding: 5px;
-      border: 0.5px solid $color-22;
+      border: 1px solid $color-21;
       border-radius: 7px;
       margin-top: 15px;
+      background: $color-20;
 
-      .img-block {
+      .imgBlock {
         display: flex;
         width: 100px;
         min-width: 100px;
@@ -67,28 +72,44 @@
         max-height: 100px;
         margin: auto 15px auto 15px;
 
-        .animation-bg-money,
-        .animation-bg-item {
+        .animationBackground {
           display: flex;
           width: 100px;
           height: 100px;
+          position: relative;
+
+          .fade {
+            position: absolute;
+            top: -10px;
+            left: -10px;
+            right: -10px;
+            bottom: -10px;
+            opacity: 0;
+            width: 120px;
+            height: 120px;
+            transition: opacity 1s ease-in-out;
+          }
+
+          .active {
+            opacity: 1;
+          }
         }
       }
 
-      .prizes-all {
+      .prizesDescription {
         display: flex;
         flex-direction: row;
         width: 100%;
         height: auto;
-        padding: 15px;
+        padding: 5px;
         border-width: 1px;
         border-left-style: solid;
         border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $color-22, rgba(0, 0, 0, 0)) 1 100%;
 
 
-        .text-h5 {
+        .textInformationH5 {
           font-weight: 400;
-          font-size: 19px;
+          font-size: 16px;
           color: $color-3;
           text-align: center;
           height: auto;
@@ -96,7 +117,7 @@
           width: 100%;
           margin-top: auto;
           margin-bottom: auto;
-          margin-right: 15px;
+          margin-right: 8px;
         }
 
         .pick {
@@ -110,13 +131,20 @@
           line-height: 35px;
           margin: auto 0;
           text-align: center;
-          font-size: 18px;
+          font-size: 16px;
           font-weight: 400;
           color: $color-3;
           background: $color-4;
           border: none;
           border-radius: 5px;
           cursor: pointer;
+          transition: all 0.35s ease;
+          font-family: $fontCustom2;
+
+          &:hover {
+            background: $color-6;
+            color: $color-2;
+          }
         }
       }
     }
@@ -130,102 +158,66 @@
 }
 
 @media screen and (max-width: 1280px) {
-  .box-prizes {
-    .all-prizes {
-      .one-prizes {
-        height: auto;
-        min-height: 130px;
-
-        .prizes-all {
-          flex-direction: column;
-
-          .pick {
-            margin: 10px auto 0 auto;
-          }
-        }
-      }
-    }
-  }
 }
 
 @media screen and (max-width: 1024px) {
 }
 
 @media screen and (max-width: 960px) {
+  .boxPrizesWrapper {
+    .allPrizesContainer {
+      padding: 0;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
 }
 
 @media screen and (max-width: 640px) {
-  .box-prizes {
-    .prizes-h4 {
-      font-size: 22px;
-      margin: 15px auto;
-    }
-
-    .all-prizes {
-      .one-prizes {
+  .boxPrizesWrapper {
+    .allPrizesContainer {
+      .onePrizesWrapperBox {
         flex-direction: column;
         height: auto;
 
-        .img-block {
+        .imgBlock {
           margin: 0 auto;
         }
 
-        .prizes-all {
+        .prizesDescription {
           flex-direction: column;
           border: none;
 
-          .text-h5 {
+          .textInformationH5 {
             font-size: 14px;
             width: 100%;
-            margin: 0 auto;
+            margin: 0 auto 8px auto;
             padding: 5px;
             border-width: 1px;
             border-bottom-style: solid;
             border-top-style: solid;
             border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color-22, rgba(0, 0, 0, 0)) 1 0;
           }
+
+          .pick {
+            margin: 0 auto;
+          }
         }
       }
+    }
+
+    .prizes-link {
+      height: fit-content;
+      min-height: fit-content !important;
+      max-height: none;
+      line-height: 1.25;
+      margin: 10px auto 5px auto;
     }
   }
 }
 
 @media screen and (max-width: 480px) {
-  .box-prizes {
-    .prizes-h4 {
-      font-size: 20px;
-      margin: 15px auto 10px auto;
-    }
-
-    .all-prizes {
-      padding-right: 10px;
-
-      .one-prizes {
-        .img-block {
-          width: 75px;
-          min-width: 75px;
-          max-width: 75px;
-          height: 75px;
-          min-height: 75px;
-          max-height: 75px;
-
-          .animation-bg-money,
-          .animation-bg-item {
-            display: flex;
-            width: 75px;
-            height: 75px;
-          }
-        }
-
-        .prizes-all {
-          padding: 5px;
-        }
-      }
-    }
-  }
 }
 
 @media screen and (max-width: 360px) {
