--- a/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
@@ -178,10 +178,10 @@
         }
 
         .analytics {
-          background: lighten($color-8, 8%);
+          background: darken($color-8, 18%);
 
           &:hover {
-            background: lighten($color-8, 30%);
+            background: lighten($color-8, 20%);
             color: $color-2;
           }
         }
