--- a/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
@@ -1,5 +1,7 @@
 @import "../../../../Variables.scss";
 
+$table-parameter: 34;
+
 @keyframes animationModal {
   0% {
     opacity: 0;
@@ -13,15 +15,15 @@
   }
 }
 
-.main-dashboard {
+.mainUserSummary {
   display: flex;
   flex-direction: column;
-  width: auto;
+  width: 100%;
   height: auto;
 
-  .search-players {
+  .searchPlayers {
     display: flex;
-    width: 90%;
+    width: 100%;
     height: 40px;
     margin: 5px auto;
     line-height: 40px;
@@ -42,7 +44,8 @@
     }
   }
 
-  .button-search-players {
+  .buttonSearchPlayers,
+  .buttonPlayersSubmit {
     width: 100%;
     max-width: 250px;
     height: 30px;
@@ -66,14 +69,14 @@
     }
   }
 
-  .wrapper-btn-manager {
+  .wrapperButtonManager {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin: 0 auto;
     width: 100%;
 
-    .button-search {
+    .buttonSearchAll {
       width: auto;
       min-width: 150px;
       max-width: 350px;
@@ -100,160 +103,40 @@
     }
   }
 
-  .manager-h4 {
+  .managerTitleh4 {
     color: $color-8;
     width: auto;
     height: 20px;
     line-height: 20px;
+    text-align: center;
     font-size: 20px;
     font-weight: 400;
-    margin: 35px 175px 5px 175px;
+    margin: 35px auto 5px auto;
   }
 
-  .table-main-styling {
-    width: 100%;
-    max-width: 85%;
+  .tableMainStyling {
+    width: auto;
+    min-width: 0;
+    max-width: 100%;
     border: 1px solid $color-22;
     background: $color-7;
     margin: 5px auto;
 
-    .manager-btn {
+    .tableTheadStyling {
       width: auto;
-      height: 25px;
-      margin: auto 5px;
-      line-height: 25px;
-      text-align: center;
-      outline: none;
-      padding: 0 8px;
-      background: $color-7;
-      border: 0.5px solid $color-22;
-      border-radius: 3px;
-      transition: all 0.25s ease-in-out;
-      color: $color-8;
-      cursor: pointer;
-      font-size: 14px;
-
-      &:hover,
-      &:focus,
-      &:active {
-        outline: none;
-        background: $color-21;
-      }
+      height: #{$table-parameter}px;
+      line-height: #{$table-parameter}px;
     }
 
-    .table-coordinates {
-      width: 80px !important;
-      text-align: center;
-    }
-
-    .action-table {
-      width: 200px !important;
-    }
-
-    .action-table-regen {
-      width: 300px !important;
-    }
-
-    .age-stat-table {
-      width: 100px !important;
-    }
-
-    .textP {
-      width: 100%;
-      height: 35px;
-      line-height: 35px;
-      font-size: 14px;
-      text-align: start;
-      padding: 0 10px;
-    }
-
-    .link-user {
+    .tableTbodyStyling {
       width: auto;
-      height: 35px;
-      line-height: 35px;
-      color: $color-1;
-      font-weight: 400;
-      text-decoration: none;
-      font-size: 14px;
-      transition: all 0.35s ease;
+      height: auto;
 
-      &:hover {
-        color: $color-12;
-      }
-    }
-
-    .in-manager {
-      border: none;
-      border-radius: 0;
-      outline: none;
-      width: 100%;
-      height: 35px;
-      line-height: 35px;
-      background: transparent;
-      color: inherit;
-      padding: 0 10px;
-
-      &:focus {
-        color: $color-1;
-        //border: 1px solid $color-1;
-      }
-    }
-
-    .in-manager-textarea {
-      position: relative;
-      border: none;
-      border-radius: 0;
-      outline: none;
-      width: auto;
-      min-width: 100%;
-      max-width: 800px;
-      min-height: 34px;
-      max-height: 102px;
-      margin: 0;
-      background: transparent;
-      color: inherit;
-      padding: 10px;
-      vertical-align: bottom;
-
-      &:focus {
-        color: $color-1;
-      }
-    }
-
-    .in-manager-option {
-      width: 100%;
-      height: 35px;
-      line-height: 35px;
-      border: none;
-      border-radius: 0;
-      color: $color-8;
-      text-align: start;
-      font-size: 16px;
-      font-weight: 400;
-      outline: none !important;
-      padding: 7px;
-      background: transparent;
-      cursor: pointer;
-
-      &:hover,
-      &:active,
-      &:focus {
-        outline: none;
-        background: $color-21;
-      }
-    }
-
-    .table-thead-styling {
-      height: 34px;
-      line-height: 34px;
-    }
-
-    .table-tbody-styling {
-      .table-tr-styling-rows {
+      .tableStylingRows {
         height: auto;
-        min-height: 34px;
-        max-height: 102px;
-        line-height: 34px;
+        min-height: #{$table-parameter}px;
+        max-height: calc(#{$table-parameter} * 5px);
+        line-height: #{$table-parameter}px;
         border-top: 1px solid $color-22;
         transition: all 0.20s ease;
 
@@ -267,49 +150,237 @@
       }
     }
 
-    .table-th-styling-columns {
-      width: auto;
-      max-width: 800px;
-      color: $color-3;
-      font-weight: 400;
-      font-size: 16px;
-      border-left: 1px solid $color-22;
-      transition: all 0.15s ease;
+    .tableTheadStyling,
+    .tableTbodyStyling {
+      .tableStylingRows {
+        .tableStylingColumns {
+          width: auto;
+          color: $color-3;
+          font-weight: 400;
+          font-size: 14px;
+          border-left: 1px solid $color-22;
+          transition: all 0.15s ease;
 
-      &:hover {
-        color: lighten($color-8, 20%) !important;
-        //border: 1px solid lighten($color-8, 20%) !important;
-      }
+          &:hover {
+            color: lighten($color-8, 20%) !important;
+            //border: 1px solid lighten($color-8, 20%) !important;
+          }
 
-      &:nth-child(1) {
-        border: none;
-        width: 250px;
-      }
-    }
+          &:nth-child(1) {
+            border: none;
+          }
 
-    .modals-manager {
-      .modal-open {
-        width: auto;
-        max-width: 150px;
-        height: 25px;
-        margin: auto 8px;
-        line-height: 25px;
-        text-align: center;
-        outline: none;
-        padding: 0 8px;
-        background: $color-7;
-        border: 1px solid $color-22;
-        border-radius: 5px;
-        transition: all 0.25s ease-in-out;
-        color: $color-8;
-        cursor: pointer;
-        font-size: 14px;
+          .modalOpen {
+            width: auto;
+            max-width: 150px;
+            height: 25px;
+            margin: auto 8px;
+            line-height: 25px;
+            text-align: center;
+            outline: none;
+            padding: 0 8px;
+            background: $color-7;
+            border: 1px solid $color-22;
+            border-radius: 5px;
+            transition: all 0.25s ease-in-out;
+            color: $color-8;
+            cursor: pointer;
+            font-size: 14px;
 
-        &:hover,
-        &:focus,
-        &:active {
+            &:hover,
+            &:focus,
+            &:active {
+              outline: none;
+              background: $color-21;
+            }
+          }
+        }
+
+        .userNameColumn {
+          min-width: 170px !important;
+          max-width: 170px !important;
+          width: 170px !important;
+        }
+
+        .userAgeColumn {
+          min-width: 80px !important;
+          max-width: 80px !important;
+          width: 80px !important;
+        }
+
+        .userStatusColumn {
+          min-width: 80px !important;
+          max-width: 80px !important;
+          width: 80px !important;
+        }
+
+        .userActionColumn {
+          min-width: 200px !important;
+          max-width: 200px !important;
+          width: 200px !important;
+        }
+
+        .userModalOpen {
+          min-width: 180px !important;
+          max-width: 180px !important;
+          width: 180px !important;
+        }
+
+        .coordinatesColumn {
+          min-width: 80px !important;
+          max-width: 80px !important;
+          width: 80px !important;
+        }
+
+        .mapsNameColumn {
+          min-width: 300px !important;
+          max-width: 300px !important;
+          width: 300px !important;
+        }
+
+        .mapsActionColumn {
+          min-width: 220px !important;
+          max-width: 220px !important;
+          width: 220px !important;
+        }
+
+        .mapsDescriptionColumn {
+          min-width: 800px !important;
+          max-width: 800px !important;
+          width: 800px !important;
+        }
+
+        .mapsWorldColumn {
+          min-width: 160px !important;
+          max-width: 160px !important;
+          width: 160px !important;
+        }
+        .mapsLinkColumn,
+        .regenLinkColumn{
+          min-width: 50px !important;
+          max-width: 50px !important;
+          width: 50px !important;
+        }
+        .regenActionColumn{
+          min-width: 300px !important;
+          max-width: 300px !important;
+          width: 300px !important;
+        }
+
+        .userIdColumn{
+          min-width: 200px !important;
+          max-width: 200px !important;
+          width: 200px !important;
+        }
+
+        .textP {
+          width: 100%;
+          height: #{$table-parameter}px;
+          line-height: #{$table-parameter}px;
+          font-size: 13px;
+          padding: 0 10px;
+        }
+
+        .inputManagerSelect {
+          width: 100%;
+          height: #{$table-parameter}px;
+          line-height: #{$table-parameter}px;
+          border: none;
+          border-radius: 0;
+          color: $color-8;
+          text-align: start;
+          font-size: 16px;
+          font-weight: 400;
+          outline: none !important;
+          padding: 7px;
+          background: transparent;
+          cursor: pointer;
+
+          &:hover,
+          &:active,
+          &:focus {
+            outline: none;
+            background: $color-21;
+          }
+        }
+
+        .inputManager {
+          border: none;
+          border-radius: 0;
           outline: none;
-          background: $color-21;
+          width: 100%;
+          height: #{$table-parameter}px;
+          line-height: #{$table-parameter}px;
+          background: transparent;
+          color: inherit;
+          padding: 0 10px;
+          font-size: 13px;
+
+          &:focus {
+            color: $color-1;
+          }
+        }
+
+        .inputManagerTextarea {
+          border: none;
+          border-radius: 0;
+          outline: none;
+          width: 100%;
+          min-width: 100%;
+          max-width: 100%;
+          height: #{$table-parameter}px;
+          min-height: #{$table-parameter}px;
+          max-height: calc(#{$table-parameter} * 5px);
+          line-height: #{$table-parameter}px;
+          margin: 0;
+          background: transparent;
+          color: inherit;
+          padding: 0 10px;
+          vertical-align: bottom;
+          font-size: 13px;
+
+          &:focus {
+            color: $color-1;
+          }
+        }
+
+        .managerActionsButton {
+          width: auto;
+          height: 25px;
+          margin: auto 5px;
+          line-height: 25px;
+          text-align: center;
+          outline: none;
+          padding: 0 8px;
+          background: $color-7;
+          border: 0.5px solid $color-22;
+          border-radius: 3px;
+          transition: all 0.25s ease-in-out;
+          color: $color-8;
+          cursor: pointer;
+          font-size: 14px;
+
+          &:hover,
+          &:focus,
+          &:active {
+            outline: none;
+            background: $color-21;
+          }
+        }
+
+        .linkMap,
+        .linkUser{
+          width: 100%;
+          height: #{$table-parameter}px;
+          line-height: #{$table-parameter}px;
+          font-size: 13px;
+          padding: 0 10px;
+          text-decoration: none;
+          color: $color-1;
+          transition: all 0.35s ease;
+          &:hover {
+            color: $color-8;
+          }
         }
       }
     }
@@ -317,7 +388,7 @@
 }
 
 body {
-  .modal-main {
+  .modalMain {
     position: absolute;
     z-index: 12001;
     background: $color-21;
@@ -330,7 +401,7 @@ body {
     width: auto;
     height: auto;
 
-    .close-modal {
+    .closeModal {
       position: absolute;
       top: -40px;
       right: -40px;
@@ -357,13 +428,13 @@ body {
       }
     }
 
-    .card-wrapper-manager {
+    .cardWrapperManagerUser {
       display: flex;
       flex-direction: row;
       width: 100%;
       height: 100%;
 
-      .card-one {
+      .cardOne {
         display: flex;
         flex-direction: row;
         width: 100%;
@@ -374,7 +445,7 @@ body {
           flex-direction: column;
           justify-content: flex-start;
 
-          .player-image {
+          .playerImage {
             width: 150px;
             min-width: 150px;
             max-width: 150px;
@@ -410,7 +481,7 @@ body {
           }
         }
 
-        .text-container {
+        .textContainer {
           display: flex;
           flex-direction: column;
           width: 100%;
@@ -429,7 +500,7 @@ body {
             border: 1px solid $color-22;
             border-radius: 5px;
 
-            .text-p {
+            .textDescriptionParagraph {
               width: auto;
               min-width: max-content;
               height: 24px;
@@ -463,7 +534,7 @@ body {
               }
             }
 
-            .input-redactor {
+            .inputUserRedactor {
               width: auto;
               min-width: 400px;
               max-width: 1500px;
@@ -516,30 +587,30 @@ body {
       }
     }
 
-    .card-log {
+    .cardLog {
       display: flex;
       flex-direction: row;
       justify-content: center;
       padding: 15px;
 
-      .table-log {
+      .tableLogStyling {
         width: auto;
         max-width: 100%;
         border: 1px solid $color-22;
         background: $color-7;
         margin: 0;
 
-        .log-thead {
+        .tableLogTheadStyling {
         }
 
-        .log-tbody {
+        .tableLogTbodyStyling {
         }
 
-        .log-rows {
+        .tableLogRowsStyling {
           height: auto;
-          min-height: 36px;
-          max-height: 36px;
-          line-height: 36px;
+          min-height: #{$table-parameter}px;
+          max-height: #{$table-parameter}px;
+          line-height: #{$table-parameter}px;
           border-top: 1px solid $color-22;
           transition: all 0.20s ease;
 
@@ -552,12 +623,11 @@ body {
           }
         }
 
-        .log-columns {
+        .tableLogColumnsStyling {
           width: auto;
-          min-width: 250px;
           color: $color-3;
           font-weight: 400;
-          font-size: 16px;
+          font-size: 14px;
           border-left: 1px solid $color-22;
           transition: all 0.15s ease;
 
@@ -567,14 +637,31 @@ body {
 
           &:nth-child(1) {
             border: none;
-            width: 250px;
           }
         }
 
-        .log-input {
+        .logTimeColumn {
+          min-width: 250px !important;
+          max-width: 250px !important;
+          width: 250px !important;
+        }
+
+        .logValueColumn {
+          min-width: 1200px !important;
+          max-width: 1200px !important;
+          width: 1200px !important;
+        }
+
+        .logManagerColumn {
+          min-width: 250px !important;
+          max-width: 250px !important;
+          width: 250px !important;
+        }
+
+        .logInput {
           width: 100%;
-          height: 36px;
-          line-height: 36px;
+          height: #{$table-parameter}px;
+          line-height: #{$table-parameter}px;
           outline: none;
           border: none;
           border-radius: 0;
@@ -582,6 +669,7 @@ body {
           color: $color-3;
           transition: all 0.3s ease;
           padding: 0 6px;
+          font-size: 14px;
 
           &:hover {
             color: $color-8;
@@ -592,22 +680,11 @@ body {
           }
         }
 
-        .time {
-          width: 250px;
-        }
-
-        .log {
-          width: 900px;
-        }
-
-        .manager {
-          width: 250px;
-        }
       }
     }
   }
 
-  .overlay-modal {
+  .overlayModal {
     top: 0;
     left: 0;
     right: 0;
