--- a/src/modules/pages/manager/Manager.module.scss
+++ b/src/modules/pages/manager/Manager.module.scss
@@ -1,65 +1,80 @@
 @import "../../../Variables.scss";
 
-.wrapperManagerTo {
+.wrapperManager {
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 1400px;
+  max-width: 1900px;
   margin: 0 auto;
 
-  .navigationTitle {
-    font-family: $fontCustom2;
-    font-size: 22px;
-    font-weight: 400;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
-    color: $color-3;
-  }
-
-  .row {
+  .actions {
     display: flex;
     flex-direction: row;
-    margin: 8px 0;
-    width: auto;
-    height: 42px;
-    padding: 5px 0 5px 18px;
-    background: $color-20;
-    border-radius: 8px;
-    border: 1px solid $color-22;
+    justify-content: center;
 
-    .name {
+    .buttonActions {
+      height: 24px;
+      line-height: 24px;
       width: auto;
-      height: 32px;
-      line-height: 32px;
-      font-weight: 400;
-      font-size: 16px;
-      color: $color-3;
-    }
-
-    .link {
-      width: 120px;
-      text-align: center;
-      height: 32px;
-      line-height: 32px;
-      font-weight: 400;
-      font-size: 16px;
-      font-family: $fontCustom2;
-      color: $color-3;
+      min-width: 280px;
+      padding: 0;
+      background: $color-4;
+      outline: none;
+      border-radius: 8px;
+      cursor: pointer;
       transition: all 0.35s ease;
-      text-decoration: none;
-      margin: auto 0 auto auto;
+      color: $color-2;
+      border: 1px solid $color-21;
+      margin: 0 20px;
+      font-weight: 400;
+      font-size: 14px;
+      font-family: $fontCustom2;
 
-      &:active,
-      &:hover,
-      &:focus,
-      &:visited {
+      &:hover {
+        background: $color-6;
+        border: 1px solid $color-22;
+      }
+    }
+  }
+
+  .slider {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 1800px;
+    height: auto;
+    margin: 8px auto 0 auto;
+    padding: 0;
+
+    .wrapperManagerTo {
+      display: flex;
+      flex-direction: column;
+      margin: 48px auto 0 auto;
+
+      .navigationTitle {
+        font-family: $fontCustom2;
+        font-size: 22px;
+        font-weight: 400;
+        height: 40px;
+        line-height: 40px;
+        text-align: center;
         color: $color-3;
       }
 
-      &:hover {
-        color: $color-8;
+      .link {
+        text-decoration: none;
+        height: 32px;
+        line-height: 32px;
+        font-family: $fontCustom2;
+        font-size: 16px;
+        font-weight: 400;
+        color: $color-1;
       }
     }
   }
 }
+
+
+
+
+
