fix title style

--- a/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
@@ -103,7 +103,7 @@ $table-parameter: 34;
     }
   }
 
-  .managerTitleh4 {
+  .managerTitleH4 {
     color: $color-8;
     width: auto;
     height: 20px;
