--- a/src/modules/components/[0_grouped_0]-Manager/Faq-editor/Faq-editor.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Faq-editor/Faq-editor.module.scss
@@ -12,7 +12,7 @@
   margin-top: 8px;
 }
 
-.btn{
+.btn {
   margin: 3px;
   width: 36px;
   height: 36px;
@@ -21,4 +21,23 @@
   border: 1px solid $color-22;
   color: $color-3;
   cursor: pointer;
+}
+
+.wrapperBox {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.portal {
+  position: absolute;
+  width: auto;
+  height: auto;
+  background: #224e69;
+  padding: 8px;
+  border-radius: 8px;
+  top: 30%;
+  left: 10%;
 }
