Ачивки, Галерея и еще что-то

--- a/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/Gallery.module.scss
@@ -34,6 +34,19 @@
     }
   }
 
+  .noPosts {
+    font-family: $fontCustom2;
+    font-weight: 400;
+    font-size: 14px;
+    width: 100%;
+    height: auto;
+    min-height: 20px;
+    line-height: 20px;
+    text-align: center;
+    color: $color-3;
+    margin-top: 15px;
+  }
+
   .onePostGallery {
     width: auto;
     //height: 100%;
