--- a/src/modules/components/[0_grouped_0]-Profile/gallery/AnalyticsPost.module.scss
+++ b/src/modules/components/[0_grouped_0]-Profile/gallery/AnalyticsPost.module.scss
@@ -11,6 +11,28 @@
     width: 100%;
     height: auto;
 
+    .back {
+      width: max-content;
+      padding: 0 8px;
+      height: 22px;
+      line-height: 22px;
+      border: none;
+      border-radius: 0;
+      font-weight: 400;
+      font-size: 14px;
+      text-align: center;
+      color: $color-3;
+      background: transparent;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.15s ease;
+      margin: 0 auto;
+
+      &:hover {
+        color: $color-4;
+      }
+    }
+
     .infoPost {
       width: 100%;
       height: 36px;
@@ -120,3 +142,39 @@
     }
   }
 }
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+  .analyticsBlock {
+    .top {
+      .back {
+        width: 100%;
+        margin: 0;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
+}
+
