--- a/src/modules/components/particles/Particles.scss
+++ b/src/modules/components/particles/Particles.scss
@@ -12,6 +12,8 @@
 .particleBTN {
   width: 100%;
   height: 100%;
+  line-height: 1;
+  text-align: center;
   padding: 0;
   margin: 0;
   display: flex;
