--- a/src/modules/pages/gallery/Gallery.module.scss
+++ b/src/modules/pages/gallery/Gallery.module.scss
@@ -173,7 +173,8 @@
       position: relative;
       overflow: hidden;
       width: 350px;
-      height: auto;
+      height: 200px;
+      min-height: 200px;
       max-height: 200px !important;
       border: none;
       border-radius: 8px;
@@ -184,26 +185,37 @@
         scale: 1.10;
       }
 
-      .imgClass {
+      .wrapperImage {
         width: 100%;
         height: 100%;
-        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+
+        .imgClass {
+          display: flex;
+          width: 100%;
+          height: 100%;
+          cursor: pointer;
+          scale: 1.02;
+        }
       }
 
       .containerLike {
         display: flex;
         flex-direction: row;
         position: absolute;
-        bottom: 0;
-        right: 0;
-        height: 16px;
-        margin: 5px;
+        bottom: 4px;
+        right: 4px;
+        height: 20px;
 
         .likes {
           display: flex;
           flex-direction: row;
           width: auto;
-          height: 16px;
+          height: 20px;
           color: $color-3;
           transition: all 0.35s ease;
 
@@ -222,6 +234,10 @@
             background: transparent;
             cursor: pointer;
             padding: 0;
+            width: 20px;
+            height: 20px;
+            line-height: 20px;
+            text-align: center;
 
             &:hover,
             &:focus,
@@ -242,8 +258,8 @@
 
           .text {
             width: auto;
-            height: 16px;
-            line-height: 16px;
+            height: 20px;
+            line-height: 20px;
             font-weight: 400;
             font-size: 12px;
             color: $color-3;
