--- a/src/modules/components/[0_grouped_0]-shopkeepers/one-suggestions/One-suggestions.module.scss
+++ b/src/modules/components/[0_grouped_0]-shopkeepers/one-suggestions/One-suggestions.module.scss
@@ -1,28 +1,39 @@
 @import "../../../../Variables";
 
-.one-suggestions-block {
+.oneSuggestionsBlock {
   display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
+  min-width: 350px;
+  max-width: 350px;
   height: auto;
   padding: 2px;
   transition: all 0.35s ease;
   background: $color-7;
-  border-radius: 5px;
+  border-radius: 4px;
   border: 1px solid $color-22;
 
   &:hover {
     background: $color-21;
   }
 
-  .arrow-suggestions {
+  .twoSuggestions {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 138px;
+    max-width: 138px;
+    min-width: 138px;
+  }
+
+  .arrowSuggestions {
     color: $color-13;
     font-weight: 400;
     font-size: 48px;
     text-align: center;
-    height: 69px;
-    line-height: 69px;
+    height: 68px;
+    line-height: 68px;
     width: 100%;
     min-width: 100px;
     max-width: 100px;
