страничка в кабинете для дропа магазинов + фикс пустой строки в табличке

--- a/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
+++ b/src/modules/components/[0_grouped_0]-Manager/Player-summary/Player-summary.module.scss
@@ -196,6 +196,10 @@ $table-parameter: 34;
           }
         }
 
+        .userMailColumn{
+          min-width: 50px !important;
+        }
+
         .userNameColumn {
           min-width: 170px !important;
           max-width: 170px !important;
