--- a/src/modules/components/warn/Warn.module.scss
+++ b/src/modules/components/warn/Warn.module.scss
@@ -6,17 +6,17 @@
   justify-content: center;
   width: auto;
   height: auto;
-  line-height: 24px;
 
   .spanIcon {
-    width: auto;
-    height: auto;
+    width: 24px;
+    height: 24px;
     margin: auto 0;
   }
 
   .warnInformation {
     padding-left: 10px;
     height: auto;
+    min-height: 24px;
     line-height: 24px;
     color: $color-4;
     font-size: 14px;
